feat: Enhance CLI and add support for test functions
- Updated CLI to accept a path to the crate root and added an option to include test functions in the diagram.
- Introduced new modules for handling enums, functions, and implementation blocks, each with HTML rendering capabilities.
- Refactored logic to parse Rust files recursively, organizing items by type and allowing for the inclusion/exclusion of test items.
- Improved HTML templates and CSS styles for better presentation of Rust structures, enums, functions, and implementation blocks.
- Added responsive design improvements to the generated HTML output.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           lfs: true
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.85
+          toolchain: stable
       - uses: Swatinem/rust-cache@v2
 
       - name: cargo build
@@ -37,7 +37,7 @@ jobs:
           lfs: true
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.85
+          toolchain: stable
           components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v2
 
@@ -56,7 +56,7 @@ jobs:
     steps:
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.85
+          toolchain: stable
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
       - run: cargo fetch
@@ -75,7 +75,7 @@ jobs:
     steps:
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.85
+          toolchain: stable
       - uses: Swatinem/rust-cache@v2
       - uses: actions/checkout@v4
       - name: Machete
