build: update project structure and add git-cliff configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "cargo-diagram"
+name = "diagen"
+description = "A tool for generating a diagram for a Rust project based on its source code."
+repository = "https://github.com/bircni/DiagramGenerator"
 version = "0.1.0"
 edition = "2024"
+authors = ["bircni", "fabus1184"]
+readme = "README.md"
+keywords = ["diagram", "generator", "rust", "cli"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,16 +21,11 @@ serde_json = "1"
 simplelog = "0.12.2"
 syn = { version = "2.0", features = ["full", "extra-traits"] }
 tinytemplate = "1.2.1"
-# uuid = { version = "1.14", features = ["v4"] }
-# walkdir = "2.5"
 
 [lints.rust]
 unsafe_code = "deny"
 deprecated = "warn"
 elided_lifetimes_in_paths = "warn"
-future_incompatible = { level = "warn", priority = -1 }
-nonstandard_style = { level = "warn", priority = -1 }
-rust_2018_idioms = { level = "warn", priority = -1 }
 rust_2021_prelude_collisions = "warn"
 semicolon_in_expressions_from_macros = "warn"
 trivial_numeric_casts = "warn"
@@ -33,8 +33,6 @@ unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_f
 unused_extern_crates = "warn"
 unused_import_braces = "warn"
 unused_lifetimes = "warn"
-trivial_casts = "allow"
-unused_qualifications = "allow"
 
 [lints.rustdoc]
 all = "warn"
@@ -49,21 +47,19 @@ complexity = "warn"
 perf = "warn"
 pedantic = "warn"
 nursery = "warn"
-unwrap_used = "warn"
-# expect_used = "warn"
 
 # Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
-absolute_paths = "warn"
 allow_attributes = "warn"
 allow_attributes_without_reason = "warn"
 assertions_on_result_states = "warn"
 create_dir = "warn"
 clone_on_ref_ptr = "warn"
+# expect_used = "warn"
 missing_assert_message = "warn"
 panic_in_result_fn = "warn"
-shadow_reuse = "warn"
 str_to_string = "warn"
 todo = "warn"
+unwrap_used = "warn"
 unimplemented = "warn"
 wildcard_enum_match_arm = "warn"
 
