--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["src/tests/*"]
 
 [dependencies]
 anyhow = "1"
+cargo = "0.89.0"
 clap = { version = "4.5.32", features = ["derive"] }
 itertools = "0.14"
 log = "0.4.27"
@@ -21,8 +22,8 @@ proc-macro2 = { version = "1", features = ["span-locations"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 simplelog = "0.12.2"
+svg = "0.18.0"
 syn = { version = "2.0", features = ["full", "extra-traits"] }
-tinytemplate = "1.2.1"
 
 [lints.rust]
 unsafe_code = "deny"
